--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="assets/style.css">
+  <link rel="stylesheet" href="assets/css/style.css">
 </head>
 
 <body>
@@ -16,40 +16,34 @@
         <img class="header-logo__image" src="assets/images/logo.svg" alt="site logo">
       </div>
 
-      <nav class="header-menu__navbar">
-        <ul class="header-navbar__list">
-          <li class="header-navbar__item">
-            <a class="header-navbar__link" href="">Product</a>
-          </li>
-          <li>
-            <a class="header-navbar__link" href="">Features</a>
-          </li>
-          <li>
-            <a class="header-navbar__link" href="">Pricing</a>
-          </li>
-          <li>
-            <a class="header-navbar__link" href="">Case studies</a>
-          </li>
-          <li>
-            <a class="header-navbar__link" href="">Resources</a>
-          </li>
-        </ul>
+      <div class="header-menu__hamburger">
+        <span class="header-menu__hamburger-row"></span>
+        <span class="header-menu__hamburger-row"></span>
+        <span class="header-menu__hamburger-row"></span>
+      </div>
+
+      <nav class="header-menu__navbar header-navbar">
+        <a class="header-navbar__item" href="">Product</a>
+        <a class="header-navbar__item" href="">Features</a>
+        <a class="header-navbar__item" href="">Pricing</a>
+        <a class="header-navbar__item" href="">Case studies</a>
+        <a class="header-navbar__item" href="">Resources</a>
       </nav>
 
       <div class="header-menu__actions">
-        <button class="btn btn--light" type="button">Log in</button>
-        <button class="btn btn--accent" type="button">Try it free</button>
+        <button class="btn btn--light header-menu__btn" type="button">Log in</button>
+        <button class="btn btn--accent header-menu__btn" type="button">Try it free</button>
       </div>
 
     </div>
+
     <div class="header-content">
       <h1 class="header-content__title">Accelerate localization from code to delivery</h1>
       <div class="header-content__description">A localization and translation management platform for agile teams.
         Embrace automation, workflow transparency, and fast project delivery.</div>
-
       <div class="header-content__actions">
-        <button class="btn btn--accent" type="button">Try it free</button>
-        <button class="btn btn--light" type="button">Book a demo</button>
+        <button class="btn btn--accent header-content__btn" type="button">Try it free</button>
+        <button class="btn btn--light header-content__btn" type="button">Book a demo</button>
       </div>
       <div class="header-content__notes">Try all features for 14 days · No credit card required</div>
       <div class="header-content__picture"><img class="header-content__image" src="assets/images/header.svg" alt="">
@@ -84,6 +78,9 @@
       </div>
     </section>
   </main>
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
