--- a/index.html
+++ b/index.html
@@ -77,7 +77,288 @@
         </div>
       </div>
     </section>
+
+    <section class="job">
+      <div class="container">
+        <article class="control">
+          <div class="control__content">
+            <h3 class="control__title">Control the localization process</h3>
+            <p class="control__description">Collaborate with your team in a single workspace. Add and assign <u
+                class="underline">tasks</u>, track progress, and enjoy a seamless localization workflow where you know
+              who is doing what and when.</p>
+            <div class="control__btn"><a href="">Start now</a></div>
+          </div>
+          <div class="control__picture"><img class="control__image" src="assets/images/control.png" alt="image"></div>
+        </article>
+
+        <article class="time">
+          <div class="time__content">
+            <h3 class="time__title">Shorten time to market</h3>
+            <p class="time__description">Localize your product in parallel with the development cycle. Use the Adobe XD,
+              Figma, and Sketch plugins to start working on translations as soon as the product design is ready. No more
+              idle waiting.</p>
+            <div class="time__btn"><a href="">Start now</a></div>
+          </div>
+          <div class="time__picture"><img class="time__image" src="assets/images/time.png" alt="image"></div>
+        </article>
+
+        <article class="quality">
+          <div class="quality__content">
+            <h3 class="quality__title">Ensure quality</h3>
+            <p class="quality__description">Use built-in tools — e.g. translation memory, machine translation, and QA
+              checks — to enhance the quality and cohesion of translations. Add product screenshots for context and use
+              the in-context editors for instant previews.</p>
+            <div class="quality__btn"><a href="">Start now</a></div>
+          </div>
+          <div class="quality__picture"><img class="quality__image" src="assets/images/quality.png" alt="image"></div>
+        </article>
+
+        <article class="work">
+          <div class="work__content">
+            <h3 class="work__title">Less work for developers</h3>
+            <p class="work__description">Eliminate the hassle of localization and let developers get back to their main
+              tasks. Save hours with the powerful API, CLI, mobile SDKs, and integrations with GitHub, Bitbucket, JIRA,
+              and more.</p>
+            <div class="work__btn"><a href="">Start now</a></div>
+          </div>
+          <div class="work__picture"><img class="work__image" src="assets/images/work.svg" alt="image"></div>
+        </article>
+      </div>
+    </section>
+
+    <section class="opportunities">
+      <div class="container">
+        <h2 class="opportunities__title">What can you localize with Lokalise?</h2>
+        <div class="opportunities__content">
+          <div class="opportunity-item">
+            <h3 class="opportunity-item__title">Web apps</h3>
+            <p class="opportunity-item__description">Any kind of web apps — backend, frontend, single page, blogs — you
+              name it.</p>
+            <div class="opportunity-item__picture">
+              <img class="opportunity-item__image" src="assets/images/webapps.png" alt="">
+            </div>
+          </div>
+
+          <div class="opportunity-item">
+            <h3 class="opportunity-item__title">Mobile apps</h3>
+            <p class="opportunity-item__description">Upload any mobile platform language files. Embed <u>Lokalise iOS
+                SDK</u> or <u>Lokalise Android SDK</u> if you prefer. </p>
+            <div class="opportunity-item__picture">
+              <img class="opportunity-item__image" src="assets/images/mobileapps.png" alt="">
+            </div>
+          </div>
+
+          <div class="opportunity-item">
+            <h3 class="opportunity-item__title">Games</h3>
+            <p class="opportunity-item__description">Our cloud software is trusted by many leading game developers
+              around the world.</p>
+            <div class="opportunity-item__picture">
+              <img class="opportunity-item__image" src="assets/images/games.png" alt="">
+            </div>
+          </div>
+
+          <div class="opportunity-item">
+            <h3 class="opportunity-item__title">Documents</h3>
+            <p class="opportunity-item__description">Upload your DOCX and static HTML files.</p>
+            <div class="opportunity-item__picture">
+              <img class="opportunity-item__image" src="assets/images/documents.png" alt="">
+            </div>
+          </div>
+
+          <div class="opportunity-item">
+            <h3 class="opportunity-item__title">Marketing e-mails</h3>
+            <p class="opportunity-item__description">Integrate with Salesforce Marketing Cloud (coming soon) or
+              translate static e-mails.</p>
+            <div class="opportunity-item__picture">
+              <img class="opportunity-item__image" src="assets/images/marketing.png" alt="">
+            </div>
+          </div>
+
+          <div class="opportunity-item">
+            <h3 class="opportunity-item__title">IoT</h3>
+            <p class="opportunity-item__description">We support most popular localization file formats.</p>
+            <div class="opportunity-item__picture">
+              <img class="opportunity-item__image" src="assets/images/iot.png" alt="">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="productivity">
+      <div class="container">
+        <h2 class="productivity__title">Boost your localization team’s productivity tenfold</h2>
+        <div class="productivity-content">
+          <div class="productivity-item">
+            <h3 class="productivity-item__title">Managers</h3>
+            <p class="productivity-item__description">Update existing and launch new features and products while
+              simultaneously localizing them in multiple languages. Streamline your team's workflow, maximize
+              productivity, and speed up expansion to other markets.</p>
+            <div class="productivity-item__picture"><img class="productivity-item__image"
+                src="assets/images/managers.png" alt=""></div>
+            <div class="productivity-item__action"><a class="productivity-item__link" href=""><u>Learn more</u></a></div>
+          </div>
+
+          <div class="productivity-item">
+            <h3 class="productivity-item__title">Developers</h3>
+            <p class="productivity-item__description">Set up an integration with your code repository or your own custom
+              SDK via Lokalise's <u>powerful API</u>. Do that once, and every time you make changes in the code, they'll
+              be
+              automatically imported to Lokalise for translation.</p>
+            <div class="productivity-item__picture"><img class="productivity-item__image"
+                src="assets/images/developers.png" alt=""></div>
+            <div class="productivity-item__action"><a class="productivity-item__link" href=""><u>Learn more</u></a></div>
+          </div>
+
+          <div class="productivity-item">
+            <h3 class="productivity-item__title">Translators</h3>
+            <p class="productivity-item__description">Eliminate double-work and neverending revisions with visual
+              context (screenshots) and live previews. Improve the quality and speed of your translations with built-in
+              CAT tools, like autocomplete, inline machine translation, and translation memory.</p>
+            <div class="productivity-item__picture"><img class="productivity-item__image"
+                src="assets/images/translators.png" alt=""></div>
+            <div class="productivity-item__action"><a class="productivity-item__link" href=""><u>Learn more</u></a></div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="comment">
+      <div class="container">
+        <div class="comment-container">
+          <div class="comment-content">
+            <div class="comment-content__description">“Lokalise has turned a task we were dreading into an absolute
+              pleasure. Great platform, intuitive UX, powerful API. The automatic text recognition for screenshots has
+              been a lifesaver, and over-the-air updates are the icing on the cake.”</div>
+            <div class="comment-content__name">Edward Cooper, Chief Mobile Officer</div>
+            <div class="comment-content__logo"><img class="comment-content__photo-image" src="assets/images/revolut.svg"
+                alt=""></div>
+          </div>
+          <div class="comment-content__picture"><img class="comment-content__image" src="assets/images/photo.png"
+              alt=""></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="rating">
+      <div class="container">
+        <div class="rating-container">
+          <div class="rating-header">
+            <h2 class="rating-header__title">The most-loved translation management software</h2>
+            <div class="rating-header__image"><img src="assets/images/rating1.png" alt=""></div>
+          </div>
+          <div class="rating-logo">
+            <div class="rating-logo1">
+              <a href=""><img src="assets/images/rating2.svg" alt=""></a>
+            </div>
+            <div class="rating-logo2">
+              <a href=""><img src="assets/images/rating3.svg" alt=""></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="integrate">
+      <div class="container">
+        <div class="integrate-content">
+          <h2 class="integrate__title">Integrate Lokalise with your work tools</h2>
+          <div class="integrate__description">Automate processes, eliminate routine tasks, and track progress with ease.
+          </div>
+          <div class="integrate__picture"><img class="integrate__image" src="assets/images/integrate.png" alt=""></div>
+          <div class="integrate__action"><button class="integrate__button btn--accent">See all integrations</button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="trial">
+      <div class="container">
+        <div class="trial-content">
+          <h2 class="trial__title">Localization made easy. Why wait?</h2>
+          <p class="trial__description">Try for free or let us show you how it works.</p>
+          <div class="trial__action">
+            <button class="btn trial__button btn--dark" type="button">Try it free</button>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
+
+  <!-- <footer class="footer">
+    <div class="container">
+      <div class="footer-container">
+        <div class="footer-menu">
+          <div class="footer-menu__content">
+            <h2 class="footer-menu__title">Case Studies</h2>
+            <div class="footer-menu__description">Riding towards global success with a 100% teammate enthusiasm</div>
+            <div class="footer-menu__picture">
+              <img class="footer-menu__image" src="assets/images/footer.svg" alt="">
+            </div>
+            <div class="footer-menu__logo">
+              <img src="assets/images/specialized.svg" alt="">
+            </div>
+            <div class="footer-menu__action"><a class="footer-menu__link" href="">Read more</a></div>
+          </div>
+        </div>
+
+        <div class="footer-navbar">
+          <div class="footer-navbar__item">
+            <h3 class="footer-navbar__title">Product</h3>
+            <div class="footer-navbar__list">
+              <a class="footer-navbar__link" href="">For developers</a>
+              <a class="footer-navbar__link" href="">For managers</a>
+              <a class="footer-navbar__link" href="">For translators</a>
+              <a class="footer-navbar__link" href="">For designers</a>
+              <a class="footer-navbar__link" href="">Integrations</a>
+              <a class="footer-navbar__link" href="">Security</a>
+              <a class="footer-navbar__link" href="">Pricing</a>
+              <a class="footer-navbar__link" href="">Automations</a>
+            </div>
+          </div>
+
+          <div class="footer-navbar__item">
+            <h3 class="footer-navbar__title">Support</h3>
+            <div class="footer-navbar__list">
+              <a class="footer-navbar__link" href="">Contact</a>
+              <a class="footer-navbar__link" href="">Documentation</a>
+              <a class="footer-navbar__link" href="">Status</a>
+              <a class="footer-navbar__link" href="">Product Updates</a>
+              <a class="footer-navbar__link" href="">CLI Tool</a>
+              <a class="footer-navbar__link" href="">API Reference</a>
+              <a class="footer-navbar__link" href="">iOS and Android SDK</a>
+              <a class="footer-navbar__link" href="">Supported File Formats</a>
+            </div>
+          </div>
+
+          <div class="footer-navbar__item">
+            <h3 class="footer-navbar__title">Company</h3>
+            <div class="footer-navbar__list">
+              <a class="footer-navbar__link" href="">About</a>
+              <a class="footer-navbar__link" href="">Blog</a>
+              <a class="footer-navbar__link" href="">Careers | We`re Hiring</a>
+              <a class="footer-navbar__link" href="">Case Studies</a>
+              <a class="footer-navbar__link" href="">Media Kit</a>
+            </div>
+          </div>
+
+          <div class="footer-navbar__item">
+            <h3 class="footer-navbar__title">Legal</h3>
+            <div class="footer-navbar__list">
+              <a class="footer-navbar__link" href="">Terms of Service</a>
+              <a class="footer-navbar__link" href="">Privacy Policy</a>
+              <a class="footer-navbar__link" href="">Cookie Policy</a>
+              <a class="footer-navbar__link" href="">Privacy Shield</a>
+              <a class="footer-navbar__link" href="">DPA</a>
+              <a class="footer-navbar__link" href="">List of Sub-processors</a>
+              <a class="footer-navbar__link" href="">Candidates Privacy Notice</a>
+            </div>
+          </div>
+        </div>
+      </div> 
+    </div>
+    </div>
+  </footer> -->
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="assets/js/main.js"></script>
