все еще махаюсь с футером

--- a/index.html
+++ b/index.html
@@ -196,7 +196,8 @@
               productivity, and speed up expansion to other markets.</p>
             <div class="productivity-item__picture"><img class="productivity-item__image"
                 src="assets/images/managers.png" alt=""></div>
-            <div class="productivity-item__action"><a class="productivity-item__link" href=""><u>Learn more</u></a></div>
+            <div class="productivity-item__action"><a class="productivity-item__link" href=""><u>Learn more</u></a>
+            </div>
           </div>
 
           <div class="productivity-item">
@@ -207,7 +208,8 @@
               automatically imported to Lokalise for translation.</p>
             <div class="productivity-item__picture"><img class="productivity-item__image"
                 src="assets/images/developers.png" alt=""></div>
-            <div class="productivity-item__action"><a class="productivity-item__link" href=""><u>Learn more</u></a></div>
+            <div class="productivity-item__action"><a class="productivity-item__link" href=""><u>Learn more</u></a>
+            </div>
           </div>
 
           <div class="productivity-item">
@@ -217,7 +219,8 @@
               CAT tools, like autocomplete, inline machine translation, and translation memory.</p>
             <div class="productivity-item__picture"><img class="productivity-item__image"
                 src="assets/images/translators.png" alt=""></div>
-            <div class="productivity-item__action"><a class="productivity-item__link" href=""><u>Learn more</u></a></div>
+            <div class="productivity-item__action"><a class="productivity-item__link" href=""><u>Learn more</u></a>
+            </div>
           </div>
         </div>
       </div>
@@ -240,7 +243,7 @@
       </div>
     </section>
 
-    <section class="rating">
+    <!-- <section class="rating">
       <div class="container">
         <div class="rating-container">
           <div class="rating-header">
@@ -266,7 +269,7 @@
           <div class="integrate__description">Automate processes, eliminate routine tasks, and track progress with ease.
           </div>
           <div class="integrate__picture"><img class="integrate__image" src="assets/images/integrate.png" alt=""></div>
-          <div class="integrate__action"><button class="integrate__button btn--accent">See all integrations</button>
+          <div class="integrate__action"><button class="integrate__button btn--accent" type="button">See all integrations</button>
           </div>
         </div>
       </div>
@@ -282,22 +285,22 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
   </main>
 
-  <!-- <footer class="footer">
+  <footer class="footer">
     <div class="container">
       <div class="footer-container">
         <div class="footer-menu">
           <div class="footer-menu__content">
-            <h2 class="footer-menu__title">Case Studies</h2>
-            <div class="footer-menu__description">Riding towards global success with a 100% teammate enthusiasm</div>
+            <h3 class="footer-menu__title">Case Studies</h3>
             <div class="footer-menu__picture">
               <img class="footer-menu__image" src="assets/images/footer.svg" alt="">
             </div>
             <div class="footer-menu__logo">
-              <img src="assets/images/specialized.svg" alt="">
+              <img src="assets/images/specializedmin.svg" alt="">
             </div>
+            <div class="footer-menu__description">Riding towards global success with a 100% teammate enthusiasm</div>
             <div class="footer-menu__action"><a class="footer-menu__link" href="">Read more</a></div>
           </div>
         </div>
@@ -355,10 +358,26 @@
             </div>
           </div>
         </div>
-      </div> 
+      </div>
     </div>
+    
+
+    <div class="footer-rights">
+      <div class="container">
+        <div class="footer-rights-container">
+          <div class="footer-rights-info">
+            <div><img src="assets/images/logo-bottom.svg" alt=""></div>
+            <p class="footer-rights__description">Localization workflow for your web and mobile apps, games and digital
+              content.</p>
+          </div>
+          <div class="footer-rights-copyright">
+            <p class="footer-rights__description">©2001-2020</p>
+            <p class="footer-rights__description">All rights reserved.</p>
+          </div>
+        </div>
+      </div>
     </div>
-  </footer> -->
+  </footer>
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <script src="assets/js/main.js"></script>
