убрала комментирование блоков

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
       </div>
     </section>
 
-    <!-- <section class="rating">
+    <section class="rating">
       <div class="container">
         <div class="rating-container">
           <div class="rating-header">
@@ -285,7 +285,7 @@
           </div>
         </div>
       </div>
-    </section> -->
+    </section>
   </main>
 
   <footer class="footer">
